# image-gallery

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HowToBuildAnApp.md  LICENSE  Readme.md  boot.sh  docker-compose.yml  pyproject.toml  setup_local_env.sh  uwsgi.ini
src/: manage.py
src/app/: admin.py  apps.py  models.py  repository.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_device.py  0003_alter_onetimetoken_id.py  0004_device_device_type.py  0005_onetimetoken_user_device_ids.py  0006_rename_device_authorizeddevices.py  0007_rename_authorizeddevices_authorizeddevice.py  0008_delete_authorizeddevice_delete_onetimetoken.py  0009_initial.py  0010_remove_appinstallation_device_type.py
src/app/templates/: settings.html
src/app/tests/: test_device_endpoints.py
src/image_gallery/: asgi.py  settings.py  urls.py  wsgi.py
